kubernetes/apps/network/envoy-gateway/app/external-services/default-redirect.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name default-redirect
  namespace: &namespace network
spec:
  hostnames:
    - "${SECRET_DOMAIN}"
  parentRefs:
    - name: external-direct
      namespace: *namespace
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "status.${SECRET_DOMAIN}"
