kubernetes/apps/network/envoy-gateway/app/external-services/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-unifi-service
  namespace: network
spec:
  ports:
    - name: https
      port: &port 443
      protocol: TCP
      appProtocol: HTTPS
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-unifi-service-endpoint
  namespace: network
  labels:
    kubernetes.io/service-name: external-unifi-service
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - ${LAN_CLOUD_KEY_IP}
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name external-unifi-service
  namespace: &namespace network
spec:
  hostnames:
    - "un.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: *namespace
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          weight: 1
          port: 443
